--- a/index.html
+++ b/index.html
@@ -21,35 +21,42 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/style.css">
 	
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>
-	<script src="carrousel.js"></script>
+	<script src="roller.js"></script>
 	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	
 </head>
 <body>
 	
-	<article id="content">
-		<div class="wrapper">
-			
-			<hr>
-			
-			<ul id="carrousel">
-				<li class="i1"><a href="#"><img src="assets/images/1.jpg"></a></li>
-				<li class="i2"><a href="#"><img src="assets/images/2.jpg"></a></li>
-				<li class="i3"><a href="#"><img src="assets/images/3.jpg"></a></li>
-				<li class="i4"><a href="#"><img src="assets/images/4.jpg"></a></li>
-				<li class="i5"><a href="#"><img src="assets/images/5.jpg"></a></li>
-				<li class="i6"><a href="#"><img src="assets/images/6.jpg"></a></li>
-				<li class="i7"><a href="#"><img src="assets/images/7.jpg"></a></li>
-			</ul>
-			
-			<hr>
-			
-		</div>
+	<article>
+		
+		<ul>
+			<li class="i1"><a href="#"><img src="assets/images/1.jpg"></a></li>
+			<li class="i2"><a href="#"><img src="assets/images/2.jpg"></a></li>
+			<li class="i3"><a href="#"><img src="assets/images/3.jpg"></a></li>
+			<li class="i4"><a href="#"><img src="assets/images/4.jpg"></a></li>
+			<li class="i5"><a href="#"><img src="assets/images/5.jpg"></a></li>
+			<li class="i6"><a href="#"><img src="assets/images/6.jpg"></a></li>
+			<li class="i7"><a href="#"><img src="assets/images/7.jpg"></a></li>
+		</ul>
+		
+		<nav>
+			<a href="#"></a>
+			<a href="#"></a>
+			<a href="#"></a>
+			<a href="#"></a>
+			<a href="#"></a>
+			<a href="#"></a>
+			<a href="#"></a>
+		</nav>
+		
 	</article>
 	
 	<script type="text/javascript">
 		$( function() {
-			$( '#carrousel' ).carrousel();
+			$.fn.Roller( {
+				$slides: $( 'li' ),
+				$nav: $( 'nav a' ),
+			} );
 		} );
 	</script>
 	
